tests/algorithms/x/Clojure/data_structures/hashing/hash_map.error
run: exit status 1
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/algorithms/x/Clojure/data_structures/hashing/hash_map.clj:113:1).
Cannot assign to non-mutable: size_up_hm

Full report at:
/tmp/clojure-15392359823923732932.edn
